# brushback

./: .pre-commit-config.yaml  LICENSE.md  Makefile  README.md  pyproject.toml
notebooks/: explore_savant.ipynb
src/brushback/: __init__.py
src/brushback/resources/: __init__.py
src/brushback/resources/bbref/: bbref.py
src/brushback/resources/fangraphs/: fangraphs.py
src/brushback/resources/mlbstats/: __init__.py  mlbstats.py
src/brushback/resources/savant/: __init__.py  endpoints.py  savant.py
tests/savant/: test_gamefeed.py
