[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "brushback"
version = "0.0.2"
description = "A python package to interact with PitchFX data."
requires-python = "~=3.11"
license = {file = "LICENSE.md"}
authors = [
    {name = "Jon Deans", email = "jrdeans@gmail.com"},
]
readme = "README.md"
dependencies = [
    "endpointer@git+ssh://git@github.com/jondeans/endpointer",
    "loguru",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "mypy==1.6.1",
    "pytest==7.4.3",
    "pre-commit==3.5.0",
    "ruff==0.1.3"
]
nb = [
    "jupyterlab",
]

[project.urls]
repository = "https://github.com/jondeans/brushback"

[tool.pytest.ini_options]
addopts = "-r A -v -s --import-mode=importlib --doctest-modules"
python_files =[
    "test_*.py",
    "check_*.py",
    "example_*.py"
]
testpaths = ["tests"]

[tool.ruff]
select = ["C", "E", "F", "W", "B"]
ignore = ["E203", "E266", "E501", "E731", "E741", "F401", "F403", "W291", "W293", "W605"]
line-length = 100

[tool.ruff.mccabe]
max-complexity = 18

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
